examples/test/testpolicy17682.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17682
  namespace: namespace59
spec:
  podSelector:
    matchLabels:
      key4: value35
      key32: value15
      key26: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value8
      podSelector:
        matchLabels:
          key43: value33
